Revision history for Perl extension Math::Int128.

{{$NEXT}}

0.16_03  2014-12-13
      - Removed compiler detection in favor of compiler feature checking with
        Config::AutoConf. (Dave Rolsky)

0.16_02  2014-11-05
      - add logic for detecting Apple variant of clang compiler

0.16_01  2014-11-02
      - dump output from compiler version command when running on a
        CPAN tester

0.15     2014-10-30
      - improve clang version detection code (bug report by Olaf
        Alders)
      - relax gcc version detection

0.14     2014-10-29
      - tests were broken on perls compiled with -Dusequadmath (bug
        report by Sisyphus)

0.13     2013-09-07
      - fix unaligned memory access problems happening on
        Windows+Strawerry Perl (bug report by Sisyphus)
      - silent several compiler warnings (bug report and patch by
        d.thomas@its.uq.edu.au)

0.12     2013-07-19
      - improve gcc version detection (bug report by
        d.thomas@its.uq.edu.au)
      - experimental support for clang compiler added

0.11     2013-07-18
      - fix >>= operator (patch by Dave Rolsky)
      - more and better tests (patch by Dave Rolsky)
      - easy compilation of the git version

0.10     2013-07-17
      - add support for exponentiation (bug report by Dave Rolsky)

0.09     2013-07-11
      - operator <<= was broken for unsigned 128bit numbers (bug
        report by Dave Rolsky)

0.08_01  Not Released
      - include stdint.h for 64bit integer definitions (bug report and
        solution by Sisyphus)

0.07     2012-12-10
      - rerelease as stable

0.06_07  2012-11-05
      - gcc version detection was too picky (bug report by Peter John
        Acklam)
      - int128_to_net and uint128_to_net were broken
      - add tests addapted from Math::Int64 module
      - mark internal representation of int128 wrappers as readonly in
        order to disallow their modification from outside the module

0.06_06  2012-07-20